- Group coach logic fixes